<resources>
    <string name="app_name">Sample Application</string>
    <string name="set_password">Set Password</string>
    <string name="change_password">Change Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="verify">Verify without decrypting</string>
    <string name="fingerprint_status">Fingerprint Status: %s</string>
    <string name="fingerprint_settings">Fingerprint Settings</string>
    <string name="fingerprint_not_supported">Not supported on this device</string>
    <string name="no_lockscreen_set">Device must be secured with a lockscreen</string>
    <string name="no_fingerprint_enrolled">Fingerprint must be enrolled</string>
    <string name="fingerprint_enrolled">Enrolled</string>
    <string name="password_settings">Password Settings</string>
    <string name="new_password">new password</string>
    <string name="unexpected_error">An unexpected error has occurred</string>
    <string name="old_password">old password</string>
    <string name="wrong_password">wrong password</string>
    <string name="submit">submit</string>
    <string name="fingerprint_verified">Fingerprint verified</string>
    <string name="password_verified">Password verified</string>
    <string name="reset_password">Reset Password</string>
    <string name="data_loss_warning">Resetting the password will erase all enccrypted data. Are you sure?</string>
    <string name="cancel">cancel</string>
    <string name="reset">reset</string>
    <string name="fingerprint_hw_unavailable">Fingerprint sensor unavailable</string>
    <string name="fingerprint_hw_lockout">Fingerprint sensor locked out - too many attempts</string>
    <string name="fingerprint_hw_no_space">Fingerprint sensor out of space</string>
    <string name="fingerprint_unable_to_process">Error processing fingerprint</string>
    <string name="fingerprint_timeout">Fingerprint timeout</string>
    <string name="sample_settings">Sample App</string>
    <string name="secure_page">Secure page</string>
    <string name="secret">my secret</string>
    <string name="store">store</string>
    <string name="load">load</string>
    <string name="lock">lock</string>
    <string name="unlock">unlock</string>
    <string name="security_settings">Security Settings</string>
    <string name="enable_fingerprint">Enable Fingerprint</string>
    <string name="confirm">confirm</string>
    <string name="tap_to_confirm">Tap the sensor to confirm</string>
    <string name="tap_to_reset">Tap the sensor to set new password</string>
    <string name="verify_credential">Verify credential</string>
    <string name="gated_awaiting_auth">Waiting for authorization</string>
    <string name="gated_authorized">Your have passed the authorization gate</string>
    <string name="settings">settings</string>
    <string name="gated_content">Gated Content</string>
    <string name="not_initialized">Set credentials in settings to begin</string>
    <string name="saved">saved</string>
    <string name="empty">field is empty</string>
    <string name="or">or tap</string>
    <string name="password">password</string>
</resources>
