<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.sampleapplication.SettingsActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_settings" />

        <EditText
            android:id="@+id/old_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/set_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_password" />

        <Button
            android:id="@+id/change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password" />

        <Button
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fingerprint_settings" />

        <TextView
            android:id="@+id/fingerprint_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fingerprint_status" />

        <Button
            android:id="@+id/security_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_settings" />

        <CheckBox
            android:id="@+id/enable_fingerprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_fingerprint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_settings" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />
    </LinearLayout>

</ScrollView>