<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.sampleapplication.MainActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/secure_page" />

        <RelativeLayout
            android:id="@+id/encrypted_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title">

            <EditText
                android:id="@+id/secret"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/secret"
                android:inputType="text" />

            <Button
                android:id="@+id/store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/secret"
                android:text="@string/store" />

            <Button
                android:id="@+id/load"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/store"
                android:layout_toRightOf="@id/store"
                android:text="@string/load" />

        </RelativeLayout>

        <Button
            android:id="@+id/lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/encrypted_content"
            android:text="@string/lock" />

        <Button
            android:id="@+id/unlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/lock"
            android:layout_toRightOf="@id/lock"
            android:text="@string/unlock" />

        <Button
            android:id="@+id/gated_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lock"
            android:layout_marginTop="16dp"
            android:text="@string/gated_content" />

        <Button
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gated_content"
            android:layout_marginTop="32dp"
            android:text="@string/settings" />

    </RelativeLayout>

</ScrollView>